--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">vetterHealth</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_help">Support</string>
+    <string name="title_sleep_tracking">Sleep Tracking</string>
+    <string name="title_reminders">Reminders</string>
+    <string name="title_post">Post</string>
 </resources>
